# paclogger

./: .gitignore  CMakeLists.txt  README  autobuild
.github/workflows/: codeql.yml
cmake/: env.h.in  paclogger.hook.in
src/: logfile.cpp  logfile.h  main.cpp
